# finance-learning-os

./: .gitignore  CLAUDE.md  knowledge_gaps.md  pyproject.toml
components/: CLAUDE.md
tests/: CLAUDE.md
tools/: CLAUDE.md
