[project]
name = "finance-learning-os"
version = "0.1.0"
description = "Personal finance learning operating system"
requires-python = ">=3.11"

dependencies = [
    # HTTP & parsing
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    # Data
    "pandas>=2.2",
    "numpy>=1.26",
    # LLM
    "anthropic>=0.26",
    # Utils
    "python-dotenv>=1.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
